<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityFragment">

    <Button
        android:id="@+id/button_buyFactory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="194dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:text="Buy Factory"
        app:layout_constraintBottom_toTopOf="@+id/button_upgrades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_bottleWater"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_music"
        android:layout_width="90dp"
        android:layout_height="22dp"
        android:visibility="gone"
        android:text="Music"
        app:layout_constraintBottom_toTopOf="@+id/button_musicPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_musicPlay"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:visibility="gone"
        android:text="Play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/button_upgrades"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginTop="250dp"
        android:visibility="gone"
        android:text="Upgrades"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_bottleWater"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_musicPause"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:visibility="gone"
        android:text="Pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/button_bottleWater"
        android:layout_width="147dp"
        android:layout_height="113dp"
        android:visibility="gone"
        android:text="Bottle Water"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="Money: "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_bottleWater"
        app:layout_constraintVertical_bias="0.441" />

    <TextView
        android:id="@+id/textView_moneyValue"
        android:layout_width="58dp"
        android:layout_height="22dp"
        android:text="0.0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toEndOf="@+id/textView_money"
        app:layout_constraintTop_toBottomOf="@+id/button_bottleWater"
        app:layout_constraintVertical_bias="0.441" />

    <TextView
        android:id="@+id/textView_factories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Factories: "
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:id="@+id/textView_factoriesNumber"
        android:layout_width="39dp"
        android:layout_height="21dp"
        android:text="0.0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toEndOf="@+id/textView_factories"
        app:layout_constraintTop_toBottomOf="@+id/button_start"
        app:layout_constraintVertical_bias="0.504" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="178dp"
        android:layout_height="190dp"
        android:visibility="visible"
        android:text="Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:text="Save"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_bottleWater"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />

    <Button
        android:id="@+id/button_reset_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset Game"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <!-- Upgrade screen -->

    <TextView
        android:id="@+id/textView_factoriesNumber_upgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toEndOf="@+id/textView_factories"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/textView_factories_upgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Factories"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/textView_moneyValue_upgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toEndOf="@+id/textView_money_upgrade"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/button_mountainWater_upgrade"
        android:layout_width="168dp"
        android:layout_height="69dp"
        android:text="Mountain Water"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_buyFactory_upgrade"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_spicyWater_upgrade"
        android:layout_width="168dp"
        android:layout_height="69dp"
        android:text="Spicy Water"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mountainWater_upgrade"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_divineWater_upgrade"
        android:layout_width="168dp"
        android:layout_height="69dp"
        android:text="Divine Water"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_spicyWater_upgrade"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_buyFactory_upgrade"
        android:layout_width="168dp"
        android:layout_height="69dp"
        android:text="Buy Factory"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <TextView
        android:id="@+id/textView_money_upgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Money"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>